[package]
name = "duanju"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json","stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.228"
anyhow = "1.0.100"
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.0"
